# murmur-voice

./: .gitignore  BRIEF.md  CHANGELOG.md  CLAUDE.md  JULES.md  LICENSE  README.md  README.zh-TW.md  ROADMAP.md  bench_resample_comparison.rs  benchmark  package.json  pnpm-lock.yaml  resample_bench
.github/workflows/: bot-pr-guard.yml  ci.yml  release.yml
.jules/: bolt.md  sentinel.md
docs/: RELEASE_NOTE_TEMPLATE.md
docs/briefs/: 2026-05-11-voiceink-based-pivot.md  new-repo-BRIEF-draft.md  sprint-murmur-voiceink-pivot-brief-2026-05-11.md
docs/plans/: 2026-02-14-dictionary-undo-smart-clipboard-design.md  2026-02-14-dictionary-undo-smart-clipboard-plan.md  2026-02-17-murmur-vision-roadmap.md  2026-02-17-v03-engine-abstraction-plan.md  2026-03-29-v06-product-plan.md
docs/sessions/: 2026-02-22-mic-permission-groq-hallucination-fix.md  2026-02-28-macos-codesign-notarization.md  2026-03-01-claude-session-tools.md  2026-03-01-simplify-followup.md  2026-03-10-memory-optimization-groq-lazy-load.md  2026-03-11-translate-hotkey.md  2026-03-18-whisper-anti-hallucination.md  2026-03-19-v043-features-and-fixes.md  2026-03-26-bot-pr-dedup.md  2026-03-26-pr-triage-and-simplify.md  2026-03-27-dynamic-height-expansion.md  2026-03-27-multi-mode-phase2.md  2026-03-27-text-replacement-feature.md  2026-03-28-groq-fix-and-llm-quality.md  2026-03-29-v06-product-plan.md
docs/superpowers/plans/: 2026-03-11-translate-hotkey.md  2026-03-27-main-bar-dynamic-height.md
docs/superpowers/specs/: 2026-03-11-translate-hotkey-design.md  2026-03-27-multi-mode-design.md  (+1 more)
scripts/: playback.sh
src/: events.js  i18n.js  index.html  main.js  onboarding.css  onboarding.html  onboarding.js  preview.css  preview.html  preview.js  settings.css  settings.html  settings.js  styles.css
src-tauri/: Cargo.toml  Info.plist  Murmur_Voice.entitlements  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  clipboard.rs  events.rs  frontapp.rs  frontapp_macos.rs  frontapp_windows.rs  hotkey.rs  hotkey_macos.rs  hotkey_windows.rs  lib.rs  llm.rs  main.rs  model.rs  prompts.rs  settings.rs  state.rs  whisper.rs
src/dictionaries/: ai-ml.txt  crypto.txt  dev-tools.txt
test/fixtures/: README.md
(+65 files in other folders)
