[package]
name = "murmur-voice"
version = "0.1.0"
description = "Privacy-first local voice-to-text for macOS"
authors = ["panda"]
edition = "2021"

[lib]
name = "murmur_voice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
cpal = "0.15"
whisper-rs = { version = "0.15", features = ["metal"] }
rdev = "0.5"
arboard = "3"
hound = "3.5"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json", "multipart"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
