[package]
name = "murmur-voice"
version = "0.3.3"
description = "Privacy-first local voice-to-text"
authors = ["panda"]
edition = "2021"

[lib]
name = "murmur_voice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
cuda = ["whisper-rs/cuda"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
cpal = "0.15"
rdev = "0.5"
arboard = "3"
hound = "3.5"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json", "multipart"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
thiserror = "2"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.15", features = ["metal"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.15" }
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
] }
